everything seems to work fine now ...now we wait for WorldRenderEvents to come back for 1.21.9+